[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/fonts/AlfaSlabOne-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://UI/UI.gd" type="Script" id=2]
[ext_resource path="res://Assets/Themes/Level_Theme.tres" type="Theme" id=3]

[sub_resource type="DynamicFont" id=1]
size = 30
outline_size = 1
font_data = ExtResource( 1 )

[node name="UI" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="ui_player_2_VBox" type="VBoxContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = -73.0
margin_right = 105.0
theme = ExtResource( 3 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="PlayerLabel" type="Label" parent="ui_player_2_VBox"]
margin_right = 100.0
margin_bottom = 15.0
text = "Player 2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthLabel" type="Label" parent="ui_player_2_VBox"]
margin_top = 19.0
margin_right = 100.0
margin_bottom = 34.0
text = "HP: 100"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AmmoType" type="Label" parent="ui_player_2_VBox"]
margin_top = 38.0
margin_right = 100.0
margin_bottom = 53.0
text = "Gun: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ammo" type="Label" parent="ui_player_2_VBox"]
margin_top = 57.0
margin_right = 100.0
margin_bottom = 72.0
text = "Ammo: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ui_player_1_VBox" type="VBoxContainer" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -100.0
margin_top = -73.0
theme = ExtResource( 3 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="PlayerLabel" type="Label" parent="ui_player_1_VBox"]
margin_right = 100.0
margin_bottom = 15.0
text = "Player 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthLabel" type="Label" parent="ui_player_1_VBox"]
margin_top = 19.0
margin_right = 100.0
margin_bottom = 34.0
text = "HP: 100"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AmmoType" type="Label" parent="ui_player_1_VBox"]
margin_top = 38.0
margin_right = 100.0
margin_bottom = 53.0
text = "Gun: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ammo" type="Label" parent="ui_player_1_VBox"]
margin_top = 57.0
margin_right = 100.0
margin_bottom = 72.0
text = "Ammo: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WinContainer" type="Control" parent="CenterContainer"]
margin_left = 320.0
margin_top = 180.0
margin_right = 320.0
margin_bottom = 180.0

[node name="WinLabel" type="Label" parent="CenterContainer/WinContainer"]
margin_bottom = 14.0
grow_horizontal = 2
grow_vertical = 2
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 1, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = -3
custom_fonts/font = SubResource( 1 )
text = "Player 1 Won"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonContainer" type="Control" parent="CenterContainer/WinContainer"]
margin_top = 40.0
margin_bottom = 40.0
size_flags_horizontal = 2
size_flags_vertical = 2
theme = ExtResource( 3 )

[node name="Menu_Button" type="Button" parent="CenterContainer/WinContainer/ButtonContainer"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -85.0
margin_right = -5.0
margin_bottom = 21.0
text = "Menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Restart_Button" type="Button" parent="CenterContainer/WinContainer/ButtonContainer"]
margin_left = 5.0
margin_right = 85.0
margin_bottom = 21.0
text = "Restart"

[connection signal="pressed" from="CenterContainer/WinContainer/ButtonContainer/Menu_Button" to="." method="_on_Menu_Button_pressed"]
[connection signal="pressed" from="CenterContainer/WinContainer/ButtonContainer/Restart_Button" to="." method="_on_Restart_Button_pressed"]
